--- a/teoricas/teorica_08/src/ekf_slam.tex
+++ b/teoricas/teorica_08/src/ekf_slam.tex
@@ -346,7 +346,7 @@
     \end{itemize}
 
     \begin{center}
-    \textit{Courtesy: Dissanayake, M. Montemerlo, J.M. Castellanos}
+        \includegraphics[width=0.5\textwidth]{../images/ekf_slam/ekf_slam_correlations.pdf}
     \end{center}
 \end{frame}
 
@@ -418,7 +418,7 @@
     \frametitle{Literature}
     \note{Información extraída de https://www.youtube.com/watch?v=X30sEgIws0g}
     \note{Información extraída de https://www.ipb.uni-bonn.de/html/teaching/photo12-2021/2021-pho2-16-ekf-slam.pptx.pdf}
-    
+
     \begin{itemize}
     \item Thrun et al.: "Probabilistic Robotics", Chapter 10
     \end{itemize}
