Slides 08: Add slides

--- a/common/math_preamble.tex
+++ b/common/math_preamble.tex
@@ -2,6 +2,8 @@
 \usepackage{amssymb}
 \usepackage{amsopn}
 \usepackage{mathtools}
+\usepackage{nicematrix} % Add colors to matrix
+
 
 % set matrix maximum length
 \setcounter{MaxMatrixCols}{20}
