--- a/teoricas/teorica_08/src/slam.tex
+++ b/teoricas/teorica_08/src/slam.tex
@@ -2,6 +2,7 @@
     \frametitle{Temario para estas slides}
     
     \begin{itemize}
+        \item EKF-SLAM
         \item Graph-SLAM / Factor Graph
         \item Loop-Closure
         \item Bundle Adjustment
