Slides 08: Add slides

--- a/teoricas/teorica_08/src/ekf_slam.tex
+++ b/teoricas/teorica_08/src/ekf_slam.tex
@@ -347,7 +347,7 @@
     \end{pmatrix} \]
     \begin{itemize}
         \item $\Sigma_{x_0}$: Initial uncertainty in robot pose (typically small)
-        \item $\infty I_{2N}$: Infinite uncertainty for unobserved landmarks
+        \item $\infty$: Infinite uncertainty for unobserved landmarks
     \end{itemize}
 \end{frame}
 
