Slides 08: Minor changes

--- a/teoricas/teorica_08/src/bibliography.tex
+++ b/teoricas/teorica_08/src/bibliography.tex
@@ -4,7 +4,6 @@
     Material para armar estas slides:
     \begin{itemize}
         \item Cyrill Stachniss SLAM \url{https://youtu.be/BuRCJ2fegcc}
-        \item Cyrill Stachniss EKF-SLAM \url{https://www.youtube.com/watch?v=X30sEgIws0g}
         \item Cyrill Stachniss Factor Graph \url{https://youtu.be/uuiaqGLFYa4}
         \item Cyrill Stachniss Graph-based SLAM using Pose Graphs \url{https://youtu.be/uHbRKvD8TWg}
         \item Cyrill Stachniss Graph-Based SLAM with Landmarks \url{https://youtu.be/mZBdPgBtrCM}
@@ -31,7 +30,7 @@
         \item Lennart Svensson - Machile Learning Tutorial: Factor Graphs, Belief Propagation and Variational Techniques \url{https://youtu.be/yQg34-2QhvE}
     \end{itemize}
 
-    \alert{Trabajo Práctico de SLAM a considerar \url{https://github.com/MiguelAngelCalveraUnizar/Mini-SLAM_student}}
+    \alert{incorporar ejercicio ekf-slam (con mapeo de landmarks): \url{https://courses.cs.washington.edu/courses/cse571/24sp/assignments/CSE571_24sp_HW2.pdf}}
 
     
 \end{frame}
